--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,18 +26,27 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:26.0.1'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
-    compile 'com.android.support:design:26.0.0-beta2'
+    implementation 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:design:26.0.1'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.google.android.gms:play-services-maps:11.0.0'
+    implementation 'com.google.android.gms:play-services-maps:11.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // ButterKnife
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 
+    //Leak canary
+    /*debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.2'*/
+
+    //Utils map
     compile 'com.google.maps.android:android-maps-utils:0.4+'
+
+    //Lottie
+    compile 'com.airbnb.android:lottie:2.1.2'
 }
