--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".demo.PolylineDemoActivity"
+            android:label="@string/polyline_demo"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
